<resources>
    <string name="app_name">Github User Search</string>
    <string name="indonesianhero">IndonesianHero</string>
    <string name="github_user">Github User | Final Project</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="repository">Repository</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="logo_bdd">Logo BDD</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Github User</string>
    <string name="setting">setting</string>
    <string name="favourite">favourite</string>
    <string name="fav_user">My Favourite User</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_time">Reminder at 9:00 AM</string>
    <string name="settings">Setting</string>
    <string name="bdd">Bdd Notif</string>
    <string name="lets_find_user_popular">notifikasi untuk proyek akhir bdd</string>
    <string name="alarm_cancel">alarm telah di batalkan</string>
    <string name="alarm_aktif">alarm di aktifkan</string>
    <string name="state_favourite">State favourite</string>


</resources>