<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="GithubSearch"
            type="id.radenyaqien.githubuserdicoding.data.models.DetailUserResponse" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout


        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="310dp"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:toolbarId="@+id/toolbar">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutheader"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/primaryColor"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar_detail"
                        style="@style/Widget.AppCompat.Toolbar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@color/primaryColor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:titleTextColor="@android:color/background_light" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_Hero"
                        setImageUrl="@{GithubSearch.avatarUrl}"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/indonesianhero"
                        app:civ_border_color="@color/primaryTextColor"
                        app:civ_border_width="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/toolbar_detail" />

                    <TextView
                        android:id="@+id/txt_follower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(GithubSearch.followers)}"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toStartOf="@+id/txt_following"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/txt_following"
                        tools:text="TextView" />

                    <TextView
                        android:id="@+id/txt_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@{String.valueOf(GithubSearch.following)}"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toStartOf="@+id/txt_repo"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/txt_follower"
                        app:layout_constraintTop_toBottomOf="@+id/iv_Hero"
                        tools:text="TextView" />

                    <TextView
                        android:id="@+id/txt_repo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repository"
                        android:textColor="@color/primaryTextColor"
                        app:layout_constraintEnd_toEndOf="@id/txt_repo1"
                        app:layout_constraintStart_toStartOf="@+id/txt_repo1"
                        app:layout_constraintTop_toTopOf="@+id/txt_following1"
                        tools:layout_editor_absoluteX="306dp" />

                    <TextView
                        android:id="@+id/txt_follower1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/follower"
                        android:textColor="@color/primaryTextColor"
                        app:layout_constraintEnd_toEndOf="@+id/txt_follower"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="@+id/txt_follower"
                        app:layout_constraintTop_toTopOf="@+id/txt_following1" />

                    <TextView
                        android:id="@+id/txt_following1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        android:textColor="@color/primaryTextColor"
                        app:layout_constraintEnd_toEndOf="@+id/txt_following"
                        app:layout_constraintStart_toStartOf="@+id/txt_following"
                        app:layout_constraintTop_toBottomOf="@+id/txt_following" />

                    <TextView
                        android:id="@+id/txt_repo1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(GithubSearch.publicRepos)}"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/txt_following1"
                        app:layout_constraintTop_toTopOf="@+id/txt_following"
                        tools:text="TextView" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabBackground="@color/primaryColor"
                app:tabIndicatorColor="@color/colorAccent"
                app:tabMode="fixed"
                app:tabSelectedTextColor="@color/colorAccent"

                />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"

                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_baseline_favorite_border_24"
            app:backgroundTint="@color/primaryColor"
            app:elevation="@dimen/cardview_default_elevation"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/state_favourite" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>